syntax = "proto3";

package taskqueue;

// Define the package path for the generated Go code
option go_package = "task-queue-system/proto";

// TaskService defines the gRPC service for submitting and checking tasks.
service TaskService {
    // SubmitTask adds a new task to the queue.
    rpc SubmitTask(SubmitTaskRequest) returns (SubmitTaskResponse);
    // GetTaskStatus retrieves the current status of a task.
    rpc GetTaskStatus(GetTaskStatusRequest) returns (GetTaskStatusResponse);
}

// SubmitTaskRequest contains the details for a new task.
message SubmitTaskRequest {
    string type = 1;
    string payload = 2;
    int32 priority = 3;
}

// SubmitTaskResponse contains the ID of the newly created task.
message SubmitTaskResponse {
    string task_id = 1;
}

// GetTaskStatusRequest specifies which task to check.
message GetTaskStatusRequest {
    string task_id = 1;
}

// GetTaskStatusResponse provides the status and result of a task.
message GetTaskStatusResponse {
    string task_id = 1;
    string status = 2;
    string result = 3;
}